--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,5 +1,5 @@
 title:  Learning About Machines
-# tagline:  a minimalist Jekyll theme
+tagline:  shallow thoughts and deep learning
 author:
   name: 'Will Whitney'
   twitter:  wfwhitney
