--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -6,8 +6,8 @@ author:
 
 # Change to true for Disqus comments
 disqus:
-  comments: false
-  disqus_shortname: 'https-lenpaul-github-io-lagrange'
+  comments: true
+  disqus_shortname: 'learning-4'
 
 google-ID: 'UA-104146434-1'
 
