changes to enable blogging

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -5,20 +5,21 @@ author:
 
 # Change to true for Disqus comments
 disqus:
-  comments: true
+  comments: false
   disqus_shortname: 'learning-4'
 
 google-ID: 'UA-104146434-1'
 
 menu:
-# - {name: 'About', url: 'about.html'}
-# - {name: 'Writing', url: 'writing.html'}
+- {name: 'Home', url: '/'}
+# - {name: 'About', url: 'menu/about.html'}
+- {name: 'Writing', url: '/menu/writing.html'}
 # - {name: 'Contact', url: 'contact.html'}
 
 social:
 - {icon: 'github', link: 'https://www.github.com/willwhitney'}
 - {icon: 'twitter', link: 'https://twitter.com/wfwhitney'}
 - {icon: 'envelope', link: 'mailto:wfwhitney@gmail.com'}
-- {icon: 'rss', link: '/feed.xml'}
+# - {icon: 'rss', link: '/feed.xml'}
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
